[metadata]
name = loglette
version = attr: loglette.__version__
author = attr: loglette.__author__
author_email = siku2@outlook.com
description = A changelog parser
long_description = file: README.md
long_description_content_type = "text/markdown"
url = "https://github.com/siku2/Loglette"
keywords = changelog
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
packages = find:
install_requires =
    python-dateutil

[options.packages.find]
include = loglette

[options.entry_points]
console_scripts =
    loglette = loglette.__main__:main